--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
   <!-- Preloader -->
   <div id="preloader">
-    <img src="img/logo/logo-merged.png" alt="">
+    <img src="img/logo/logo-merged.png" alt="" class="center">
     <div id="status">&nbsp;</div>
   </div>
   <!-- Preloader ends -->
@@ -101,6 +101,83 @@
     </nav>
   </header>
   <!-- Header ends -->
+
+  <!-- ちょっと面白がって作ってみる-->
+  <ul id="navScroll">
+    <i></i>
+    <li class="nav-main active" data-section="home">
+      <em style="height: 50%"></em>
+      <span>01</span>
+      <a href="home">
+        <strong>Home</strong>
+      </a>
+    </li>
+    <li class="nav-main active" data-section="about">
+      <em style="height: 50%"></em>
+      <span>02</span>
+      <a href="about">
+        <strong>About</strong>
+      </a>
+    </li>
+    <li class="nav-main active" data-section="event-02">
+      <em style="height: 50%"></em>
+      <span>03</span>
+      <a href="event-02">
+        <strong>Keynote Presentation</strong>
+      </a>
+    </li>
+    <li class="nav-main active" data-section="event-00">
+      <em style="height: 50%"></em>
+      <span>04</span>
+      <a href="event-00">
+        <strong>Wakazo Ceremony</strong>
+      </a>
+    </li>
+    <li class="nav-main active" data-section="event-01">
+      <em style="height: 50%"></em>
+      <span>05</span>
+      <a href="event-01">
+        <strong>inochi Gakusei Forum 2019</strong>
+      </a>
+    </li>
+    <li class="nav-main active" data-section="event-03">
+      <em style="height: 50%"></em>
+      <span>06</span>
+      <a href="event-03">
+        <strong>inochi Mirai Forum 2019</strong>
+      </a>
+    </li>
+    <li class="nav-main active" data-section="event-04">
+      <em style="height: 50%"></em>
+      <span>07</span>
+      <a href="event-04">
+        <strong>mini Wakazo Pavilion</strong>
+      </a>
+    </li>
+    <li class="nav-main active" data-section="schedule">
+      <em style="height: 50%"></em>
+      <span>08</span>
+      <a href="schedule">
+        <strong>Schedule</strong>
+      </a>
+    </li>
+    <li class="nav-main active" data-section="contact">
+      <em style="height: 50%"></em>
+      <span>09</span>
+      <a href="contact">
+        <strong>Contact</strong>
+      </a>
+    </li>
+    <li class="nav-main active" data-section="organizers">
+      <em style="height: 50%"></em>
+      <span>01</span>
+      <a href="organizers">
+        <strong>Organizers</strong>
+      </a>
+    </li>
+  </ul>
+  <!-- ちょっと面白がって作ってみる ends -->
+
 
   <!-- Home -->
   <section id="home">
