--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
             <li class="nav-item"><a class="nav-link smooth-scroll" href="#about">About</a></li>
             <li class="nav-item"><a class="nav-link smooth-scroll" href="#about-02">Program</a></li>
             <li class="nav-item"><a class="nav-link smooth-scroll" href="#schedule">Schedule</a></li>
+            <li class="nav-item"><a class="nav-link smooth-scroll" href="#access">Access</a></li>
             <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contact</a></li>
           </ul>
         </div>
@@ -114,15 +115,18 @@
             <div id="home-content-inner" class="text-center">
 
               <div id="home-heading">
-                <h1 id="home-heading-1">ここから始まるinochiの<span><ruby><rb>共創</rb><rt>co-creation</rt></ruby></span></h1>
+                <h1 id="home-heading-1" style="margin-bottom:20px;">ここから始まるinochiの<span><ruby><rb>共創</rb><rt>co-creation</rt></ruby></span></h1>
               </div>
 
               <div id="home-btn">
                 <a class="btn btn-outline-primary btn-general btn-home" href="https://inochi-gakusei-mirai-mini-wakazo-pavilion-2019.peatix.com/" target="_blank" title="Get Tickets Now" role="button">Get Tickets Now</a>
               </div>
+              <div id="home-btn">
+                <a class="btn btn-outline-primary btn-general btn-home" href="https://inochi-gakusei.com/gmforum/2019/voting" target="_blank" title="Vote Now" role="button">Vote Now</a>
+              </div>
               <br/>
               <div class="fb-share-button" data-href="https://inochi-gakusei.com/gmforum/2019" data-layout="button_count" data-size="large"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Finochi-gakusei.com%2Fgmforum%2F2019&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">シェア</a></div>
-              <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-size="large" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+              <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-size="large" data-text="高校生が心臓突然死の解決策をプレゼン・U30の若者が2025年大阪万博での出展物案を発表! - inochi Gakusei Mirai Forum 2019 × mini WAKAZO Pavilion https://inochi-gakusei.com/gmforum/2019/" data-url="https://inochi-gakusei.com/gmforum/2019/ " data-hashtags="inochi #WAKAZO #ミライフォーラム2019" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
           </div>
 
@@ -133,12 +137,26 @@
     </section>
     <!-- Home ends -->
 
-    <!-- Aboout -->
+    <!-- About -->
+    <section id="about" style="background-color:#f4f4f4">
+      <div class="content-box-lg">
+         <div class="heading">
+           <h2>About</h2>
+         </div>
+         <div id="about-info" class="text-center" style="margin-right:10%;margin-left:10%;">
+           <h4>「inochi学生プロジェクト」「WAKAZO」「一般社団法人inochi未来プロジェクト」が共に開催するイベント。プロジェクトメンバーである大学生をはじめとする若者の力で、今年1年のそれぞれの団体の活動の集大成となる内容のフォーラムやギャラリーを創り上げます。</h4>
+           <h4>2019年11月24日（日）<br/>12:00-18:45 （11:00開場予定、情報交換会19:15-21:15）</h4>
+         </div>
+      </div>
+    </section>
+    <!-- About end -->
+
+    <!-- Highlights -->
     <section id="about">
       <div class="content-box-lg">
         <div id="about-01">
           <div class="heading">
-            <h2>About</h2>
+            <h2>Highlights</h2>
           </div>
           <div class="container-fluid">
 
@@ -197,8 +215,8 @@
                   <div class="guest-right col-8 wow fadeInRight" data-wow-duration="1s">
                     <h4 class="">全体司会</h4>
                     <h2 class="guest-name">國生 千代</h2>
-                    <h5 class="guest-title">NHK大阪放送局 リポーター</h5>
-		            <h5 class="guest-contents"></br>
+                    <h5 class="guest-title" style="line-height:150%">NHK大阪放送局 リポーター</h5>
+		            <h5 class="guest-contents" style="line-height:150%"></br>
                       NHK札幌放送局でのリポーター経験をもとに、2018年4月から地元大阪の夕方ニュース番組「ニュースほっと関西」でのリポートや中継を担当。同年12月に担当した大阪・関西万博に関する中継でWAKAZOのみなさんと出会い、本日に至る。
 		            </h5>
 		          </div>
@@ -212,17 +230,22 @@
               <div class="col-12 wow fadeInDown" data-wow-duration="2s">
                 <div id="about-info" class="text-center">
                   <h3>inochi Gakusei Mirai Forum 2019 </br>×</br> mini WAKAZO Pavilion</h3>
+                  </br>
                   <h4>2019年11月24日（日）<br/>12:00-18:45 （11:00開場予定、情報交換会19:15-21:15）</h4>
+                  <!-- 
                   <h4>堂島リバーフォーラム<br/>1階HALL：フォーラム会場<br/>4階GALLERY：mini WAKAZO Pavilion会場</h4>
+                  -->
                 </div>
               </div>
             </div>
 
           </div>
 
+      <!--
       <div align=center>
        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13121.782245533688!2d135.4892884!3d34.6939402!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2ef4037b3fde1fe1!2z5aCC5bO244Oq44OQ44O844OV44Kp44O844Op44Og!5e0!3m2!1sja!2sjp!4v1567471547835!5m2!1sja!2sjp" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
       </div>
+      -->
 
       <div id="about-02">
         <div class="content-box-sm">
@@ -313,7 +336,7 @@
         </div>
       </div>
     </section>
-    <!-- About ends -->
+    <!-- Highlights ends -->
 
     <!-- Event 02 -->
     <section id="event-02">
@@ -875,6 +898,30 @@
     </section>
     <!-- Schedule ends -->
 
+    <!-- Access starts -->
+
+    <section id="access">
+      <div class="content-box-lg">
+        <div class="heading">
+          <h2>Access</h2>
+        </div>
+        <div class="text-center" id="access-info">
+          <h3>堂島リバーフォーラム<br/>1階HALL：フォーラム会場<br/>4階GALLERY：mini WAKAZO Pavilion会場</h5>
+          <div align=center>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13121.782245533688!2d135.4892884!3d34.6939402!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2ef4037b3fde1fe1!2z5aCC5bO244Oq44OQ44O844OV44Kp44O844Op44Og!5e0!3m2!1sja!2sjp!4v1567471547835!5m2!1sja!2sjp" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+          </div>
+          <p>
+          JR東西線「新福島」、阪神本線「福島」、京阪中之島線「中之島」各駅から徒歩 約5分</br>
+          JR大阪環状線「福島」、市営地下鉄四つ橋線「肥後橋」各駅から徒歩 約8分</br>
+          JR各線「大阪駅」徒歩 約15分</br>
+          ＊当施設に駐車場はございません。
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Access ends -->
+
     <!-- Contact -->
     <section id="contact">
       <div class="content-box-lg">
@@ -891,7 +938,7 @@
             <li><i class="fab fa-facebook"></i><a href="https://www.facebook.com/wakazoexpo/" target="_blank">WAKAZO</a></li>
             <br/>
             <div class="fb-share-button" data-href="https://inochi-gakusei.com/gmforum/2019" data-layout="button_count" data-size="large"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Finochi-gakusei.com%2Fgmforum%2F2019&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">シェア</a></div>
-            <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-size="large" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-size="large" data-text="高校生が心臓突然死の解決策をプレゼン・U30の若者が2025年大阪万博での出展物案を発表! - inochi Gakusei Mirai Forum 2019 × mini WAKAZO Pavilion https://inochi-gakusei.com/gmforum/2019/" data-url="https://inochi-gakusei.com/gmforum/2019/ " data-hashtags="inochi #WAKAZO #ミライフォーラム2019" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
           </ul>
         </div>
       </div>
